--- a/ReadMe
+++ b/ReadMe
@@ -38,7 +38,8 @@ https://www.odoo.com -> https://www.modulesnow.com
 >Odoo</a> -> >ModulesNow</a>
 >Odoo</ -> >ModulesNow</
 https://odoo.com -> https://modulesnow.com
-
+/Users/jayant/IdeaProjects/modulesnow/addons/web/i18n
+"Odoo" -> "Modules Now"
 ###### Buidl#############
 python3 package.py --build-deb -p /home/jayant/IdeaProjects/docker/17.0/pub/1.1/
 docker build -t jayantrpathak/modulesnow:1.1 .
