--- a/ReadMe
+++ b/ReadMe
@@ -101,4 +101,4 @@ tar -xzvf /backup/16_odoo-db-data.tar.gz -C /
 
 ##Docker build
 docker build -t jayantrpathak/msn:16.1 .
-docker push -t jayantrpathak/msn:16.1
+docker push jayantrpathak/msn:16.1
